tests/paczka1/small_fuzzy/60759346.err
Error in line 4: NskBAdGxtE S99 28,3
Error in line 2: S744 S99 88,9
Error in line 12: iC1 A960 37,2
Error in line 13: iC1 S99 88,8
